WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208624
Fix for test accessibility/mac/aria-liveregions-addedelement.html in IsolatedTree mode.
https://bugs.webkit.org/show_bug.cgi?id=208624
Summary
Fix for test accessibility/mac/aria-liveregions-addedelement.html in Isolated...
Andres Gonzalez
Reported
2020-03-04 21:51:15 PST
Fix for test accessibility/mac/aria-liveregions-addedelement.html in IsolatedTree mode.
Attachments
Patch
(4.72 KB, patch)
2020-03-04 22:03 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-03-04 22:03:22 PST
Created
attachment 392536
[details]
Patch
WebKit Commit Bot
Comment 2
2020-03-04 23:00:24 PST
Comment on
attachment 392536
[details]
Patch Clearing flags on attachment: 392536 Committed
r257903
: <
https://trac.webkit.org/changeset/257903
>
WebKit Commit Bot
Comment 3
2020-03-04 23:00:26 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-03-04 23:01:17 PST
<
rdar://problem/60072930
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug