Fix for test accessibility/mac/aria-liveregions-addedelement.html in IsolatedTree mode. https://bugs.webkit.org/show_bug.cgi?id=208624

Reviewed by Chris Fleizach.

Test: accessibility/mac/aria-liveregions-addedelement.html

LayoutTests can request the focused element before they call any method
in the WebAccessibilityObjectWrapper through AccessibilityController::focusedElement,
and thus the focused element may be amongst the pending appends of the
IsolatedTree. This change sets the focused element in the isolated
treee during generation, so it can be returned to the AccessibilityController
even if no WebAccessibilityObjectWrapper calls have been made.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::generateIsolatedTree):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::focusedUIElement):
(WebCore::AXIsolatedTree::setFocusedNode):
* accessibility/isolatedtree/AXIsolatedTree.h:


Canonical link: https://commits.webkit.org/221535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257903 268f45cc-cd09-0410-ab3c-d52691b4dbfc